--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "todolist",
+  "homepage": "https://liudasbo.github.io/todo/",
+  "name": "todo",
   "version": "1.0.0",
   "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack server"
+    "dev": "webpack serve",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +22,6 @@
     "sass": "^1.69.7",
     "sass-loader": "^14.0.0",
     "style-loader": "^3.3.4",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-cli": "^5.1.4"
   }
 }
