--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^3.3.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
